Allow custom parser types to still get signal handlers generated

Specifically, QDeclarativeListModelParser ought to have this behaviour.

Task-number: QTBUG-19763
Change-Id: I9d6ee07d1e17a027b254b87d20d1a93795c55744
Reviewed-on: http://codereview.qt.nokia.com/2431
Reviewed-by: Martin Jones <martin.jones@nokia.com>